[gd_scene load_steps=5 format=3 uid="uid://dssjh323af85u"]

[ext_resource type="Script" path="res://lib/ui/settings/components/stin_input_keybind.gd" id="1_rqt23"]
[ext_resource type="Theme" uid="uid://dfe36tnn0c1ud" path="res://generic/themes/theme.tres" id="2_pjspn"]
[ext_resource type="Script" path="res://lib/ui/clicky_button/clicky_button.gd" id="3_1jrue"]
[ext_resource type="FontFile" uid="uid://bhk1jyryyb1be" path="res://generic/fonts/plex_mono.otf" id="3_esj67"]

[node name="InputLine" type="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 106.0
offset_bottom = 27.0
script = ExtResource("1_rqt23")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_pjspn")
text = "Label"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
theme = ExtResource("2_pjspn")
text = "Button"
script = ExtResource("3_1jrue")

[node name="CancelButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_pjspn")
theme_override_fonts/font = ExtResource("3_esj67")
theme_override_font_sizes/font_size = 14
text = "X"
script = ExtResource("3_1jrue")

[connection signal="mouse_entered" from="Button" to="." method="_mouseover"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CancelButton" to="." method="_mouseover"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
